--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 # Byte-compiled / optimized / DLL files
+*
+!*.*
+!*/
+
 __pycache__/
 *.py[cod]
 *$py.class
+
+*.pth
+*.tar
+*.html
+*.gz
+*.meta
 
 # C extensions
 *.so
